Catch exception for bad xml format